<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CupertinoJudo</string>
    <string name="title_tournament">Tournament</string>
    <string name="title_club">Club</string>
    <string name="weight">Weight</string>
    <string name="belt">Belt</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cjudo_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="appwidget_updated_on_text">Updated on <xliff:g id="timestamp">%1$s</xliff:g></string>
    <string name="add_widget">Add widget</string>
    <!--Tiles-->
    <string name="concession">Concession</string>
    <string name="concession_label">Concession</string>
    <string name="pools">Pools</string>
    <string name="pools_label">Tournament Pools</string>
    <string name="venue_map">Venue Map</string>
    <string name="stats">Stats</string>
    <string name="stats_title">Tournament Stats</string>
    <string name="stats_feature_coming_soon">Coming soon! You will be able to see previous tournament statistics.</string>
    <string name="venue_map_label">Venue Map</string>
    <string name="stats_label">Tournament Statistics</string>
    <string name="directions">Directions</string>
    <string name="directions_label">Directions to Tournament</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_label">Tournament Schedule</string>
    <string name="tournament_pools">Tournament Pools</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="pool_title">Pool <xliff:g id="pool">%1$s</xliff:g></string>
    <string name="failed_to_load_data_using_cache">Failed to load network data (Using cached data).</string>
    <string name="failed_to_load_data">Failed to load data.</string>
    <string name="participant_screen_title">Player Detail</string>
    <string name="weight_in_pounds"> <xliff:g id="weight">%1$d</xliff:g> lbs</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%dm ago</string>
    <string name="hours_ago">"%dh ago"</string>
    <string name="days_ago">"%d days ago"</string>
    <string name="notification_topic">news</string>
    <string name="notification_prefs">notification</string>
    <string name="news">News</string>
    <string name="practice">Practice</string>
    <string name="about">About</string>
    <!-- SyncAdapter related -->
    <string name="sync_account_type">android.cupertinojudo.com</string>
    <string name="content_authority">com.cupertinojudo.android</string>
    <string name="format_notification">Total participants: <xliff:g id="condition">%1$d</xliff:g></string>
    <string name="participants_count"><xliff:g id="year">%1$d</xliff:g> participants: <xliff:g id="count">%2$d</xliff:g></string>
    <string name="pref_last_notification">last_notification</string>

    <string name="version">Version</string>
    <string name="open_source_license">Open Source Licenses</string>
    <string name="android_mpchart">MPAndroid Chart</string>
    <string name="format_version">Version <xliff:g id="version">%1$s</xliff:g></string>
    <string name="android_gson">GSON</string>
    <string name="android_retrofit2">Retrofit2</string>
    <string name="android_guava">Guava</string>
    <string name="android_robotium">Robotium</string>
    <string name="android_mpchart_value">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="android_gson_value">https://github.com/google/gson</string>
    <string name="android_retrofit2_value">https://github.com/square/retrofit</string>
    <string name="android_guava_value">https://github.com/google/guava</string>
    <string name="android_robotium_value">https://github.com/RobotiumTech/robotium</string>
    <string name="action_settings">Settings</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Club Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_2017_participants_count_key" translatable="false">2017_participants</string>
    <string name="pref_2017_participants_count_default" translatable="false">0</string>

    <string name="widget_participants">Participants</string>
    <string name="network_problem_try_later">Network faiure.  Please check your connection and try again.</string>

    <!-- Accessibility strings -->
    <string name="tournament_day_image_description">Tournament gym picture</string>
</resources>
