<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </FrameLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/credits_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/open_source_license"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/credits_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/android_mpchart"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/guava_credits_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/android_guava"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/robotium_credits_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/android_robotium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/retrofit2_credits_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/android_retrofit2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gson_credits_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/android_gson"
            android:textSize="15sp" />


    </LinearLayout>
</ScrollView>